Updated Space and Civil CVs

--- a/CV_Space.tex
+++ b/CV_Space.tex
@@ -20,7 +20,7 @@
 %\title{Software Test Developer}                      % optional, remove the line if not wanted
 \address{Erbprinzen Str.}{75175 Pforzheim GERMANY}    % optional, remove the line if not wanted
 \mobile{00 49 (0) 176 3760 6564}
-\phone{00 34 646 09 22 94}  % optional, remove the line if not wanted
+%\phone{00 34 646 09 22 94}  % optional, remove the line if not wanted
 \email{eballes@gmail.com}   % optional, remove the line if not wanted
 
 \nopagenumbers{} % uncomment to suppress automatic page numbering for CVs longer than one page
@@ -41,7 +41,7 @@
 \cvlistitem{Working on behalf of GMV as OSPF element specialist and consultant.}
 \cvlistitem{Responsible for the integration and validation of the processing chain (OSPF, IPF, MGF) in the GMS.}
 \cvlistitem{Designed test procedures and managed requirements in the frame of the GMS.}
-\cvlistitem{Developed tools for data analysis and test automation purposes.}
+\cvlistitem{Developed tools for data analysis and test automation purposes following ESA quality standards.}
 \cventry{Jan'09--Aug'10}{Software Developer}{GMV Aerospace}{Madrid}{Spain}{}
 \cvlistitem{Lead the design and development of our unattended OSPF test automation framework.}
 \cvlistitem{Developed an environment simulator to test the algorithm facility of OSPF in an isolated environment.}
@@ -63,7 +63,7 @@ for the development of a image capture and distributed communications software s
 %\cvlanguage{Spanish}{Native}{}
 
 \section{Computer skills}
-\cvcomputer{Languages}{\textbf{Perl}, \textbf{C}, Java, C++, Ada, Haskell}{Tools}{\textbf{DOORS}, CPAN, Valgrind, vim}
+\cvcomputer{Languages}{\textbf{Perl}, \textbf{C}, Java, C++, Ada, Haskell}{Tools}{\textbf{DOORS}, svn, CPAN, Valgrind, vim}
 \cvcomputer{Others}{MySQL, PL/SQL, Hibernate, \LaTeX}{OS}{Linux, LynxOS}
 
 \end{document}
