Better CSS than Hibernate for Space skills

--- a/CV_Space.tex
+++ b/CV_Space.tex
@@ -64,6 +64,6 @@ for the development of a image capture and distributed communications software s
 
 \section{Computer skills}
 \cvcomputer{Languages}{\textbf{Perl}, \textbf{C}, Java, C++, Ada, Haskell}{Tools}{\textbf{DOORS}, svn, CPAN, Valgrind, vim}
-\cvcomputer{Others}{MySQL, PL/SQL, Hibernate, \LaTeX}{OS}{Linux, LynxOS}
+\cvcomputer{Others}{MySQL, PL/SQL, CSS, \LaTeX}{OS}{Linux, LynxOS}
 
 \end{document}
