Well rounded version

--- a/CoverLetter.tex
+++ b/CoverLetter.tex
@@ -5,9 +5,7 @@
 
 % character encoding
 \usepackage[utf8]{inputenc}     % replace by the encoding you are using
-\usepackage{hyperref}
-\usepackage{newcent}
-\usepackage{verbatim}
+\usepackage{newcent}            % Different font style
 \usepackage{setspace}
 
 % adjust the page margins
@@ -15,19 +13,17 @@
 \AtBeginDocument{\recomputelengths} % required when changes are made to page layout lengths
 
 % personal data
-\firstname{Eduardo}
-\familyname{Ballesteros}
-\address{Erbprinzen Str.}{75175 Pforzheim GERMANY}    % optional, remove the line if not wanted
-\mobile{00 49 (0) 176 3760 6564}
-\email{eballes@gmail.com}   % optional, remove the line if not wanted
+\firstname{Eduardo} \familyname{Ballesteros}
+\address{Erbprinzen Str.}{75175 Pforzheim GERMANY}
+\mobile{00 49 176 3760 6564} \email{eballes@gmail.com}
 
-\nopagenumbers{} % uncomment to suppress automatic page numbering for CVs longer than one page
+\nopagenumbers{} % Supress page numbering
 
 % offer data
-\newcommand{\position}{Software Engineer for INTEGRAL} % position
-\newcommand{\company}{ESA/ESAC} % company
-%\newcommand{\pollo}{To Whom It May Concern} % Or dear Susi
-\newcommand{\pollo}{Dear Karina,}
+\newcommand{\position}{System and Software Engineer} % position
+\newcommand{\company}{ISOC} % company
+\newcommand{\pollo}{To Whom It May Concern,} % Or dear Susi
+%\newcommand{\pollo}{Dear Karina,}
 \newcommand{\companyAddress}{ }
 
 \onehalfspacing
@@ -36,7 +32,6 @@
 
 \fontfamily{\familydefault}
 \selectfont
-
 
 %----------------------------------------------------------------------------------
 %            content
@@ -52,18 +47,22 @@
 \noindent \pollo
 
 I am writing to express my interest in the {\position} position at {\company}, 
-because I am passionate about the space sector and the software development
-process. As software engineer, I have worked in the space industry deepening
-my understanding in a broad range of roles and positions, from development 
-to test, managing requirements as well as performing integration tasks. 
+because 
+% Start inspiration area
+I am passionate about the space industry and the software development
+process. As software engineer, I have worked in the space sector deepening
+my experience in a broad range of roles and positions from development and 
+testing roles, including integration tasks, to managing requirements and 
+writing software integration plans for system components.
 
-From my education I have learned to develop effective software, flexible and adaptable 
-and to be a goal-oriented engineer. My work experiences demostrate that I have a 
-well-rounded understanding of the challeges that are faced between different companies 
-and in multicultural teams inside the european space industry. I would bring
+From my education I have learned to develop effective, flexible and adaptable software,
+and to be a goal-oriented engineer. My work experiences demonstrate that I have a 
+well-rounded understanding of the challenges that are faced between different companies 
+and in multicultural teams inside the European space industry. I would bring
 to your team my enthusiasm for software quality and control, pragmatic problem
 solving skills and a drive to always produce the best quality of work for your
 company.
+% End inspiration area
 
 I am enclosing my resume to provide you with better understanding
 of my experience. You will find that I am well suited for the position and
@@ -74,7 +73,5 @@ consideration.\\[1.4ex]
 
 \noindent Sincerely yours,
 
-\noindent Eduardo Ballesteros\\[1.0ex]
-
-\noindent Enclosure: Resume
+\noindent Eduardo Ballesteros\\[2.4ex]
 \end{document}
