--- a/CV_Civil.tex
+++ b/CV_Civil.tex
@@ -19,7 +19,7 @@
 \familyname{Ballesteros}
 %\title{Software Test Developer}   % optional, remove the line if not wanted
 \address{Erbprinzen Str.}{75175 Pforzheim GERMANY}    % optional, remove the line if not wanted
-\mobile{00 49 (0) 176 3760 6564}
+\mobile{00 49 (0) 152 5645 9788}
 %\phone{00 34 646 09 22 94}         % optional, remove the line if not wanted
 \email{eballes@gmail.com}          % optional, remove the line if not wanted
 
@@ -39,22 +39,23 @@
 \section{Experience}
 \cventry{Aug'10--Present}{Validation Test Engineer}{Thales Alenia Space Deutschland}{Pforzheim}{Germany}{}
 \cvlistitem{Working on behalf of GMV as product specialist and consultant on client facilities.}
-\cvlistitem{Responsible for integration and validation tasks, mainly focused in performance issues inside the processing chain segment of the GMS.}
-\cvlistitem{Developed tools for data analysis and test automation purposes.}
+\cvlistitem{Responsible for integration and validation tasks (hardware/software integration, performance analysis, general troubleshooting) }
+\cvlistitem{Developed tools, mostly in Perl, for data analysis and test automation purposes.}
 \cvlistitem{Designed test procedures and managed requirements.}
+\cvlistitem{Implemented the next phase scheme for the configuration management process.}
 \cventry{Jan'09--Aug'10}{Software Developer}{GMV Aerospace}{Madrid}{Spain}{}
 \cvlistitem{Lead the design and development of our unattended test automation framework.}
-\cvlistitem{Developed an environment simulator to test the algorithm facility using ANSI C89 in a RT environment (LynxOS).}
+\cvlistitem{Developed an environment simulator to test the algorithm facility (in ANSI C89, LynxOS RTOS environment)}
 %\cvlistitem{Designed and implemented the Software Integration Plan of the OSPF-RTMC subcomponent.}
 \cvlistitem{Implemented test data analysis for the in-house Analysis Tool to verify algorithm results.}
 \cvlistitem{Analyzed execution problems and collaborated closely with the development team to correct software bugs.}
-\cvlistitem{Selected to teach a 3h Perl course to fellow co-workers focused on best practices, modern Perl techniques, idioms and code maintainability.}
+\cvlistitem{Teacher for a 3h Perl course to fellow co-workers focused on best practices, modern Perl techniques, idioms and code maintainability.}
 
 \cventry{Jul'08-Jan'09\\Sept'06-Sept'07}{Intern at Teldat}{Technical University of Madrid (UPM)}{Spain}{}{}
 \cvlistitem{Ported the Java desktop client application to manage the system to a web application using GWT.}
 \cvlistitem{Participated in a full development cycle experience, using SCRUM as management methodology, for the development of a image capture and distributed communications software system.}
-%\cvlistitem{Updated the software and system's database access for a more efficient approach through nested database procedures.}
-\cvlistitem{Lead the migration of the error-prone date and time management system to a more maintainable interface using the Joda-Time library.}
+\cvlistitem{Updated the software and system's database access for a more efficient approach through nested database procedures (MySQL)}
+%\cvlistitem{Lead the migration of the error-prone date and time management system to a more maintainable interface using the Joda-Time library.}
 
 \section{Language skills}
 \cvcomputer{English}{\textbf{Fluent}}{Spanish}{\textbf{Native}}
